syntax = "proto3";

package model;

import "google/protobuf/timestamp.proto";

import "model/auth.proto";
import "model/author.proto";

message UserIdentifier {
  oneof identifier {
    string username = 1;
    string email = 2;
    string phone_number = 3;
  }
}

message UserInfo {
  string email = 1;
  string username = 2;
  string phone_number = 3;
  google.protobuf.Timestamp created_at = 5;
  repeated string group_ids = 6;
}

message UserEntry {
  string user_id = 1;
  string printable_name = 2;
  RegisterInfo register_info = 3;
  bool verified = 4;
  repeated string group_ids = 5;
  google.protobuf.Timestamp created_at = 6;
}

message ServiceAccountEntry {
  string service_account_id = 1;
  string name = 2;
  string client_id = 3;
  repeated string group_ids = 4;
  google.protobuf.Timestamp created_at = 5;
  Author created_by = 6;
}


message MemberEntry {
  oneof entry {
    UserEntry user = 1;
    ServiceAccountEntry service_account = 2;
  }
  google.protobuf.Timestamp joined_at = 5;
}

message RegisterInfo {
  string creater_id = 1;
  RegisterMethod method = 2;
}

message RegisterMethod {
  message System {}

  message Signup {
    model.LoginType login_type = 1;
  }

  oneof method {
    System system = 1;
    Signup signup = 2;
  }
}
